changed 2 themes, added a new one.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <!--[if !IE]><!--><html lang="en" ><!--<![endif]-->
 <head>
 
-	<link type="text/css" rel="stylesheet" href="./styles/fonts.css" />
-	<link type="text/css" rel="stylesheet" href="./styles/normalize.css" />
-	<link type="text/css" rel="stylesheet" href="./styles/all.css" />
-	<link type="text/css" rel="stylesheet" href="./styles/clearfix.css" />
+	<link type="text/css" rel="stylesheet" href="./styles/styles.css" />
 
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://mikezimmerman.github.io/icons/ico144.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://mikezimmerman.github.io/icons/ico114.png" />
@@ -49,13 +46,14 @@
 <div id="container-nav" class="cw00" >
 	<section id="nav" class="cf wrapper fadein" style="visibility:hidden;" >
 
-		<div id="theme-selector" title='Click here to rotate through themes. Next up is: "Deep Midnight Flamingo"' >
+		<div id="theme-selector" >
 			<div id="ts-01" ></div>
 			<div id="ts-02" ></div>
 			<div id="ts-03" ></div>
-			<div id="ts-00" ></div>
-			<div id="ts-01-2" ></div>
-			<div id="ts-02-2" ></div>
+			<div id="ts-04" ></div>
+			<div id="ts-05" ></div><!-- ts-00 -->
+			<div id="ts-06" ></div><!-- ts-01 -->
+			<div id="ts-07" ></div><!-- ts-02 -->
 		</div>
 
 		<div id="nav-buttons" >
@@ -73,7 +71,7 @@
 <div id="container-header" class="cw00" >
 	<header id="header" class="wrapper fadein" style="visibility:hidden;" >
 
-		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" /><img id="hs-3" src="./images/photo-3.gif" /></div>
+		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" /><img id="hs-3" src="./images/photo-3.gif" /><img id="hs-4" src="./images/photo-4.gif" /></div>
 
 		<h1>Mike Zimmerman*</h1>
 		<h2>JavaScript Developer</h2>
@@ -107,7 +105,7 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
-						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" /><img id="link-s-3" src="./images/link-s-3.gif" style="display:none;" />
+						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" /><img id="link-s-3" src="./images/link-s-3.gif" style="display:none;" /><img id="link-s-4" src="./images/link-s-4.gif" style="display:none;" />
 						<p>Custom Dynamic eLearning Course, published as Flash</p>
 					</button>
 				</div>
@@ -117,7 +115,7 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
-						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" /><img id="link-v-3" src="./images/link-v-3.gif" style="display:none;" />
+						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" /><img id="link-v-3" src="./images/link-v-3.gif" style="display:none;" /><img id="link-v-4" src="./images/link-v-4.gif" style="display:none;" />
 						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
 					</button>
 					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
@@ -168,7 +166,7 @@
 					<ul>
 						<li>HTML5, CSS3, JavaScript</li>
 						<li>Mobile First Responsive Design</li>
-						<li>jQuery, JSON, AJAX</li>
+						<li>jQuery, jQueryUI, JSON, AJAX</li>
 						<li>JavaScript Objects</li>
 						<li>JavaScript SPAs</li>
 						<li>AngularJS, RequireJS, MVVM</li>
