--- a/projects/fl-el-menards/menards.htm
+++ b/projects/fl-el-menards/menards.htm
@@ -26,10 +26,7 @@
 	<link rel="canonical" href="http://mikezimmerman.github.io/" />
 
 <!-- includes for: Protfolio Add-In Styles/Content Module (see bottom of html). -->
-<link type="text/css" rel="stylesheet" href="../../styles/fonts.css" />
-<link type="text/css" rel="stylesheet" href="../../styles/normalize.css" />
-<link type="text/css" rel="stylesheet" href="../../styles/all.css" />
-<link type="text/css" rel="stylesheet" href="../../styles/clearfix.css" />
+<link type="text/css" rel="stylesheet" href="../../styles/styles.css" />
 <script src="../../scripts/jquery-1.11.1.min.js" ></script>
 <!-- end includes for. -->
 
