tweaked a theme a bit.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			</article>
 
 			<footer>
-				<h4>Plus!&nbsp; Many more examples, coming soon&hellip;</h4>
+				<h4>Plus! Many more examples, coming soon&hellip;</h4>
 			</footer>
 
 		</div>
