fixed colors of theme toggler.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	<section id="nav" class="cf wrapper fadein" style="visibility:hidden;" >
 
 		<div id="theme-selector" >
+			<div id="ts-00" ></div>
 			<div id="ts-01" ></div>
 			<div id="ts-02" ></div>
 			<div id="ts-03" ></div>
 			<div id="ts-04" ></div>
 			<div id="ts-05" ></div><!-- ts-00 -->
 			<div id="ts-06" ></div><!-- ts-01 -->
-			<div id="ts-07" ></div><!-- ts-02 -->
 		</div>
 
 		<div id="nav-buttons" >
@@ -179,8 +179,8 @@
 					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
 						<li>Node</li>
-						<li>Sass</li>
 						<li>Less</li>
+						<li>Sass</li>
 						<li>ASP</li>
 						<li>.NET</li>
 						<li>MVC</li>
