some content changes, and adjusted the CSS a bit.

--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
 
 		<div id="headshot" ><img id="hs-2" src="./images/photo-2.gif" /><img id="hs-3" src="./images/photo-3.gif" /><img id="hs-4" src="./images/photo-4.gif" /></div>
 
-		<h1>Mike Zimmerman*</h1>
+		<h1>Mike Zimmerman:</h1>
+		<h2>Designer, Developer, Content Creator</h2>
+<!--
 		<h2>JavaScript Developer</h2>
 		<h2>Web Designer</h2>
 		<h2>Content Creator</h2>
-
+-->
 	</header>
 </div>
 
@@ -232,9 +234,9 @@
 
 <div id="container-footer" class="cw00" >
 	<footer id="footer" class="fadein" style="visibility:hidden;" >
-		<p>&copy; 2014 Mike Zimmerman. All rights reserved.</p>
-		<h5>&nbsp; version: 1.0.5</h5>
-		<h3>* metropolis: Chicago</h3>
+		<h3>location (re: non-remote work):&nbsp; the metropolis of Chicago</h3>
+		<p class="cw00" >&copy; 2014 Mike Zimmerman. All rights reserved.</p>
+		<h5 class="cw00" >version: 1.1.1</h5>
 	</footer>
 </div>
 
