converted the orig. two themes to Less.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<li>Fine Art, Illustration, Photography</li>
 						<li>Fashion Illustration, Menu Design</li>
 						<li>Fine Pastries &amp; Custom Ice Creams</li>
-						<li>Distinctive Nano Aquarium Design</li>
+						<li>Idiosyncratic Nano Aquarium Design</li>
 					</ul>
 				</div>
 			</article>
@@ -234,7 +234,7 @@
 
 <div id="container-footer" class="cw00" >
 	<footer id="footer" class="fadein" style="visibility:hidden;" >
-		<h3>location (re: non-remote work):&nbsp; the metropolis of Chicago</h3>
+		<h3>location (for non-remote work):&nbsp; the metropolis of Chicago</h3>
 		<p class="cw00" >&copy; 2014 Mike Zimmerman. All rights reserved.</p>
 		<h5 class="cw00" >version: 1.1.1</h5>
 	</footer>
