removed the "ascendant" skills.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
 						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" /><img id="link-s-3" src="./images/link-s-3.gif" style="display:none;" /><img id="link-s-4" src="./images/link-s-4.gif" style="display:none;" />
-						<p>Custom Dynamic eLearning Course, published as Flash</p>
+						<p>Custom Dynamic eLearning Course (as Flash Movie)</p>
 					</button>
 				</div>
 			</article>
@@ -118,7 +118,7 @@
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
 						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" /><img id="link-v-3" src="./images/link-v-3.gif" style="display:none;" /><img id="link-v-4" src="./images/link-v-4.gif" style="display:none;" />
-						<p>Floating Instructional UI, for software simulations &amp; JIT training</p>
+						<p>&ldquo;Floating&rdquo; Instructions UI, for software sims &amp; JIT training</p>
 					</button>
 					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
 				</div>
@@ -145,23 +145,6 @@
 				</div>
 			</header>
 
-			<article class="wrapper dimmed" >
-				<div class="box" >
-					<h4 class="cw00" >&nbsp;&nbsp;Ascendant</h4>
-					<ul class="cw00" >
-						<li>Backbone</li>
-						<li>Ember</li>
-						<li>Couchbase&nbsp;&nbsp;</li>
-						<li>Cassandra</li>
-						<li>Jasmine</li>
-						<li>Knockout</li>
-						<!--<li>MongoDB</li>
-						<li>React</li>
-						<li>Meteor</li>-->
-					</ul>
-				</div>
-			</article>
-
 			<article class="wrapper active" >
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Current</h4>
@@ -171,7 +154,7 @@
 						<li>jQuery, jQueryUI, JSON, AJAX</li>
 						<li>JavaScript Objects</li>
 						<li>JavaScript SPAs</li>
-						<li>AngularJS, RequireJS, MVVM</li>
+						<li>Less, ASP.NET, MVC</li>
 					</ul>
 				</div>
 			</article>
@@ -180,24 +163,10 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
-						<li>Node</li>
-						<li>Less</li>
-						<li>Sass</li>
-						<li>ASP</li>
-						<li>.NET</li>
-						<li>MVC</li>
-					</ul>
-				</div>
-			</article>
-
-			<article class="wrapper" >
-				<div class="box" >
-					<h4 class="reversal cw00" >&nbsp;</h4>
-					<ul>
-						<li>Photoshop, Bootstrap</li>
-						<li>Visual Studio, Sublime</li>
+						<li>Photoshop</li>
+						<li>Visual Studio</li>
 						<!-- <li>Ps, VS, Sublime, GitHub</li> -->
-						<li>GitHub, Codepen</li>
+						<li>Sublime, GitHub</li>
 						<li>Instructional Design</li>
 						<li>eLearning Development</li>
 						<li>LMS, CMS, LCMS Admin</li>
@@ -220,7 +189,7 @@
 			</article>
 
 			<footer>
-				<p></p>
+				<h4></h4>
 			</footer>
 
 		</div>
