removed more skills.

--- a/index.html
+++ b/index.html
@@ -149,12 +149,11 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Current</h4>
 					<ul>
-						<li>HTML5, CSS3, JavaScript</li>
+						<li>HTML5, CSS3, JavaScript, Less</li>
 						<li>Mobile First Responsive Design</li>
 						<li>jQuery, jQueryUI, JSON, AJAX</li>
 						<li>JavaScript Objects</li>
 						<li>JavaScript SPAs</li>
-						<li>Less, ASP.NET, MVC</li>
 					</ul>
 				</div>
 			</article>
@@ -163,13 +162,11 @@
 				<div class="box" >
 					<h4 class="reversal cw00" >&nbsp;</h4>
 					<ul>
-						<li>Photoshop</li>
-						<li>Visual Studio</li>
-						<!-- <li>Ps, VS, Sublime, GitHub</li> -->
-						<li>Sublime, GitHub</li>
-						<li>Instructional Design</li>
+						<li>Photoshop, Illustrator</li>
+						<li>Visual Studio, Sublime</li>
 						<li>eLearning Development</li>
 						<li>LMS, CMS, LCMS Admin</li>
+						<li>Instructional Design</li>
 					</ul>
 				</div>
 			</article>
@@ -182,16 +179,25 @@
 						<li>Writing, Copyediting, Proofreading</li>
 						<li>Fine Art, Illustration, Photography</li>
 						<li>Fashion Illustration, Menu Design</li>
-						<li>Fine Pastries &amp; Custom Ice Creams</li>
-						<li>Idiosyncratic Nano Aquarium Design</li>
+						<li>Custom Ice Creams &amp; Aquarium Design</li>
 					</ul>
 				</div>
 			</article>
+<!--
+			<article class="wrapper dimmed" >
+ 				<div class="box" >
+ 					<h4 class="cw00" >&nbsp;&nbsp;Ascendant</h4>
+ 					<ul class="cw00" >
+						<li>Bootstrap</li>
+						<li>Sass</li>
+ 					</ul>
+ 				</div>
+ 			</article>
 
 			<footer>
 				<h4></h4>
 			</footer>
-
+-->
 		</div>
 		</section>
 
