micro text tweak.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Design</h4>
 					<button data-href="./projects/fl-el-menards/menards.htm" >
 						<img id="link-s-0" src="./images/link-s-0.gif" /><img id="link-s-1" src="./images/link-s-1.gif" style="display:none;" /><img id="link-s-2" src="./images/link-s-2.gif" style="display:none;" /><img id="link-s-3" src="./images/link-s-3.gif" style="display:none;" /><img id="link-s-4" src="./images/link-s-4.gif" style="display:none;" />
-						<p>Custom Dynamic eLearning Course (as Flash Movie)</p>
+						<p>Custom Dynamic eLearning Course (Flash Movie)</p>
 					</button>
 				</div>
 			</article>
@@ -118,7 +118,7 @@
 					<h4 class="reversal cw00" >&nbsp;&nbsp;Development</h4>
 					<button data-href="./projects/js-el-instructbox/instructbox.htm" >
 						<img id="link-v-0" src="./images/link-v-0.gif" /><img id="link-v-1" src="./images/link-v-1.gif" style="display:none;" /><img id="link-v-2" src="./images/link-v-2.gif" style="display:none;" /><img id="link-v-3" src="./images/link-v-3.gif" style="display:none;" /><img id="link-v-4" src="./images/link-v-4.gif" style="display:none;" />
-						<p>&ldquo;Floating&rdquo; Instructions UI, for software sims &amp; JIT training</p>
+						<p>&ldquo;Floating&rdquo; Instructions UI, for simulations &amp; JIT help</p>
 					</button>
 					<!-- <br><p><img id="link-1-00" src="./images/link-p1.gif" /> &nbsp;&nbsp;eLearning Engine, a client-side JavaScript SPA, begun in 2002</p> -->
 				</div>
