restored "Ascendant" list.
didn't make sense for "Current" to continue to exist without it.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<meta name="keywords" content="Mike Zimmerman, JavaScript Developer, Web Designer, Content Creator, Creative Artist, Chicago" />
 	<meta name="description" content="The online portfolio of Mike Zimmerman, Chicago-area JavaScript Developer, Web Designer, Content Creator, and Creative Artist" />
 
-	<title>MikeZimmerman/Developer</title>
+	<title>Mike Zimmerman</title>
 
 </head>
 <body class="cw00" >
@@ -183,13 +183,13 @@
 					</ul>
 				</div>
 			</article>
-<!--
+
 			<article class="wrapper dimmed" >
  				<div class="box" >
- 					<h4 class="cw00" >&nbsp;&nbsp;Ascendant</h4>
+ 					<h4 class="cw00" >&nbsp;&nbsp;Ascendant&nbsp;&nbsp;</h4>
  					<ul class="cw00" >
-						<li>Bootstrap</li>
 						<li>Sass</li>
+						<li>MV*</li>
  					</ul>
  				</div>
  			</article>
@@ -197,7 +197,7 @@
 			<footer>
 				<h4></h4>
 			</footer>
--->
+
 		</div>
 		</section>
 
