--- a/projs/menards/index.html
+++ b/projs/menards/index.html
@@ -59,7 +59,7 @@ object, img
 	<param name="movie" value="http://mikezimmerman.brace.io/fl-el-menards/menardscards.swf" />
 	<param name="quality" value="high" />
 	<param name="bgcolor" value="#c0c0c0" />
-	<param name="play" value="false" />
+	<param name="play" value="true" />
 	<param name="loop" value="false" />
 	<param name="wmode" value="window" />
 	<param name="scale" value="showall" />
@@ -72,7 +72,7 @@ object, img
 		<param name="movie" value="http://mikezimmerman.brace.io/fl-el-menards/menardscards.swf" />
 		<param name="quality" value="high" />
 		<param name="bgcolor" value="#c0c0c0" />
-		<param name="play" value="false" />
+		<param name="play" value="true" />
 		<param name="loop" value="false" />
 		<param name="wmode" value="window" />
 		<param name="scale" value="showall" />
