--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	(* disclaimer: not including the cheap supplementary clipart, which was a necessary evil dictated by this project&rsquo;s astonishingly aggressive 2-weeks zero-to-live development timeline).
 	Oh, and I also Instructional-Designed and wrote every word of its content!
 </p>
-					<p><a href="projs/menards/" target="_blank" class="transxbg secondary small button theme00" >Check it out →</a></p>
+					<p><a href="http://mikezimmerman.brace.io/fl-el-menards/" target="_blank" class="transxbg secondary small button theme00" >Check it out →</a></p>
 				</div>
 				<div class="large-2 columns" >&nbsp;</div>
 
