improved theme tooltip.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
 		<ul class="right" >
 
 			<li id="ts-cont" class="theme00" >
+
+		<div id="ttip-themesel" class="tooltip" >
+			<div class="ttip-content" >
+				<span>Click here to rotate through our 5 themes.</span>
+					<br />
+				<span><em>Current theme:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sThisTheme" ></strong></span>
+					<br />
+				<span><em>Next up:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sNextTheme" ></strong></span>
+			</div>
+		</div>
+
 				<div id="theme-selector" class="fadein" >
 					<div id="ts-00" ></div>
 					<div id="ts-01" ></div>
@@ -88,6 +99,7 @@
 					<div id="ts-05" ></div>
 					<div id="ts-06" ></div>
 				</div>
+
 			</li>
 
 			<li class="divider theme00" ></li>
