removed one space.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 			<div class="ttip-content" >
 				<span>Click here to rotate through our 5 themes.</span>
 					<br />
-				<span><em>Current theme:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sThisTheme" ></strong></span>
+				<span><em>Current theme:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sThisTheme" ></strong></span>
 					<br />
-				<span><em>Next up:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sNextTheme" ></strong></span>
+				<span><em>Next up:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sNextTheme" ></strong></span>
 			</div>
 		</div>
 
