--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
 	<meta name="application-name" content="MikeZimmerman/Developer" />
-	<meta name="msapplication-TileColor" content="#707070" />
-	<meta name="msapplication-TileImage" content="http://mikezimmerman.github.io/icons/ico64.png" />
+
+	<!-- <meta name="msapplication-TileColor" content="#707070" /> -->
+	<!-- <meta name="msapplication-TileImage" content="http://mikezimmerman.github.io/icons/ico64.png" /> -->
+	<meta name="msapplication-config" content="browserconfig.xml" />
+
 	<meta name="keywords" content="Mike Zimmerman, JavaScript Developer, Web Designer, Content Creator, Creative Artist, Chicago" />
 	<meta name="description" content="The online portfolio of Mike Zimmerman, Chicago-area JavaScript Developer, Web Designer, Content Creator, and Creative Artist" />
 
