--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<!-- <meta name="msapplication-TileColor" content="#707070" /> -->
 	<!-- <meta name="msapplication-TileImage" content="http://mikezimmerman.github.io/icons/ico64.png" /> -->
-	<meta name="msapplication-config" content="browserconfig.xml" />
+	<meta name="msapplication-config" content="http://mikezimmerman.github.io/browserconfig.xml" />
 
 	<meta name="keywords" content="Mike Zimmerman, JavaScript Developer, Web Designer, Content Creator, Creative Artist, Chicago" />
 	<meta name="description" content="The online portfolio of Mike Zimmerman, Chicago-area JavaScript Developer, Web Designer, Content Creator, and Creative Artist" />
