--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<meta name="twitter:card" content="photo" />
 	<meta name="twitter:site" content="@mikezimmerman_" />
-	<meta name="twitter:title" content="MikeZimmerman/Developer" />
+	<!-- <meta name="twitter:title" content="MikeZimmerman/Developer" /> -->
 	<meta name="twitter:description" content="My portfolio is now live, online!" />
 	<meta name="twitter:image" content="http://mikezimmerman.github.io/icons/twitcard.gif" />
 	<meta name="twitter:url" content="http://mikezimmerman.github.io/" />
