img slightly larger.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 	<meta name="twitter:card" content="photo" />
 	<meta name="twitter:site" content="@mikezimmerman_" />
-	<!-- <meta name="twitter:title" content="mikezimmerman_ developer_" /> -->
+	<!-- <meta name="twitter:title" content="mikezimmerman_ webdeveloper_" /> -->
 	<meta name="twitter:description" content="My portfolio is now live, online!" />
-	<meta name="twitter:image" content="http://mikezimmerman.github.io/icons/card.gif" />
+	<meta name="twitter:image" content="http://mikezimmerman.github.io/icons/tcard.jpg" />
 	<meta name="twitter:url" content="http://mikezimmerman.github.io/" />
 
 	<title>Mike Zimmerman</title>
