sped up the jQuery.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 	<meta name="twitter:card" content="photo" />
 	<meta name="twitter:site" content="@mikezimmerman_" />
-	<!-- <meta name="twitter:title" content="mikezimmerman_ webdeveloper_" /> -->
-	<meta name="twitter:description" content="My portfolio is now live, online!" />
+	<meta name="twitter:description" content="My online web-development portfolio... Check it out!" />
 	<meta name="twitter:image" content="http://mikezimmerman.github.io/icons/tcard.jpg" />
 	<meta name="twitter:url" content="http://mikezimmerman.github.io/" />
 
