--- a/index.html
+++ b/index.html
@@ -1,322 +1,21 @@
-<!doctype html >
-<!--[if IE 9]><html class="lt-ie10" lang="en" ><![endif]-->
-<html class="no-js" lang="en" >
+<!DOCTYPE html >
+<html lang="en" >
 <head>
-
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/styles.css" />
-
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://mikezimmerman.github.io/icons/ico144.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://mikezimmerman.github.io/icons/ico114.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://mikezimmerman.github.io/icons/ico72.png" />
-	<link rel="apple-touch-icon-precomposed" href="http://mikezimmerman.github.io/icons/ico64.png" />
-	<link rel="shortcut icon" sizes="196x196" href="http://mikezimmerman.github.io/icons/ico196.png" />
-	<link rel="shortcut icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
-	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/favicon.ico" />
-	<link rel="icon" type="image/png" href="http://mikezimmerman.github.io/icons/favicon.png" />
-	<link rel="icon" type="image/x-icon" href="http://mikezimmerman.github.io/icons/ico32.png" />
-	<link rel="canonical" href="http://mikezimmerman.github.io/" />
-
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
-	<meta name="application-name" content="MikeZimmerman/Developer" />
-	<meta name="msapplication-config" content="http://mikezimmerman.github.io/browserconfig.xml" />
-	<meta name="keywords" content="Mike Zimmerman, JavaScript Developer, Web Designer, Content Creator, Creative Artist, Chicago" />
-	<meta name="description" content="The online portfolio of Mike Zimmerman, Chicago-area JavaScript Developer, Web Designer, Content Creator, and Creative Artist" />
-
-	<meta name="twitter:card" content="photo" />
-	<meta name="twitter:site" content="@mikezimmerman_" />
-	<meta name="twitter:description" content="My online web-development portfolio... Check it out!" />
-	<meta name="twitter:image" content="http://mikezimmerman.github.io/icons/tcard.jpg" />
-	<meta name="twitter:url" content="http://mikezimmerman.github.io/" />
-
-	<title>Mike Zimmerman</title>
-
-	<script src="js/lib/modernizr.js" async="async" ></script>
-
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>mikezimmerman.</title>
 </head>
-<body class="theme00" >
-<div style="position:absolute; left:-400px; top:-400px; width:350px; overflow-y:scroll; visibility:hidden;" >
-	<span style="font-family: Choplin;" >Choplin</span>
-	<span style="font-family: Mangerica;" >Mangerica</span>
-	<span style="font-family: MuseoSlab;" >MuseoSlab</span>
-</div>
+<body style="margin: 21px; font-family:Helvetica; background-color:PaleGoldenRod;" >
 
 
+<h1>mikezimmerman.</h1>
 
-<div id="built-with-cont" >
-	<div id="showHideInfo-btn" class="theme00 transxco" >
-		<div id="showHideInfo-show" >*</div><div id="showHideInfo-hide" >x</div>
-	</div>
-	<div id="built-with" class="theme00" >
-		<h5 class="theme00" >this site was built with:</h5>
-		<ul><li class="theme00" >html5</li></ul>
-		<ul><li class="theme00" >css3</li></ul>
-		<ul><li class="theme00" >javascript</li></ul>
-		<ul><li class="theme00" >mobile first</li></ul>
-		<ul><li class="theme00" >responsive design</li></ul>
-		<ul><li class="theme00" >foundation</li></ul>
-		<ul><li class="theme00" >less</li></ul>
-		<ul><li class="theme00" >jquery</li></ul>
-		<ul><li class="theme00" >jqueryui</li></ul>
-		<ul><li class="theme00" >jquery plugins</li></ul>
-		<ul><li class="theme00" >@font-face</li></ul>
-		<ul><li class="theme00" >photoshop</li></ul>
-		<ul><li class="theme00" >sublime text</li></ul>
-		<ul><li class="theme00" >emmet</li></ul>
-		<ul><li class="theme00" >clean-css</li></ul>
-	</div>
-</div>
-
-
-
-
-
-<nav class="top-bar theme00" data-topbar >
-
-	<ul class="title-area theme00" >
-		<li class="name" ></li>
-		<li class="toggle-topbar menu-icon" ><a href="#" class="theme00" ><span class="theme00" >Menu</span></a></li>
-	</ul>
-
-	<section class="top-bar-section" >
-		<ul class="right" >
-
-			<li id="ts-cont" class="theme00" >
-
-		<div id="ttip-themesel" class="tooltip" >
-			<div class="ttip-content" >
-				<span>Click here to rotate through our 5 themes.</span>
-					<br />
-				<span><em>Current theme:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sThisTheme" ></strong></span>
-					<br />
-				<span><em>Next up:</em><br />&nbsp;&nbsp;&nbsp;&nbsp;<strong id="sNextTheme" ></strong></span>
-			</div>
-		</div>
-
-				<div id="theme-selector" class="fadein" >
-					<div id="ts-00" ></div>
-					<div id="ts-01" ></div>
-					<div id="ts-02" ></div>
-					<div id="ts-03" ></div>
-					<div id="ts-04" ></div>
-					<div id="ts-05" ></div>
-					<div id="ts-06" ></div>
-				</div>
-
-			</li>
-
-			<li class="divider theme00" ></li>
-			<li class="theme00" >
-				<a id="expertise-link" data-show-tt="true" class="fadein theme00" >Expertise</a>
-			</li>
-			<li class="divider theme00" ></li>
-			<li class="theme00" >
-				<a id="experience-link" data-show-tt="true" class="fadein theme00" >Experience</a>
-			</li>
-			<li class="divider theme00" ></li>
-			<li class="theme00" >
-				<a href="mailto:mikezimmerman@users.noreply.github.com" class="fadein theme00" >Email</a>
-			</li>
-
-		</ul>
-	</section>
-
-</nav>
-
-
-
-<div id="header" class="large-12 columns theme00" >
-
-	<div class="panel" >
-		<div class="medium-12 large-12 columns" >
-			<div class="reversal" >
-				<div id="headshot" class="fadein" ><img id="hs-1" src="img/photo-1.gif" /><img id="hs-2" src="img/photo-2.gif" /><img id="hs-3" src="img/photo-3.gif" /><img id="hs-4" src="img/photo-4.gif" /></div>
-			</div>
-		</div>
-	</div>
-
-	<div class="panel" >
-		<div class="medium-0 large-1 columns" >&nbsp;</div>
-		<div class="medium-12 large-11 columns" >
-			<div class="medium-12 large-12 columns" >
-				<h2 class="fadein" >Mike Zimmerman</h2>
-				<h1 class="fadein" >Designer, Developer, Content Creator</h1>
-				<li>&nbsp;</li>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-
-<div id="expertise" class="large-12 columns theme00" >
-
-	<div class="panel" >
-		<div class="medium-12 large-12 columns" >
-			<div class="fadein reversal" >
-				<h5 class="theme00" >Expertise</h5>
-			</div>
-		</div>
-		<div id="ttip-expertise" class="tooltip" >
-			<div class="ttip-content" >
-				This section lists some of my many skills.
-			</div>
-		</div>
-	</div>
-
-	<div class="panel" >
-
-		<div class="medium-0 large-1 columns" >&nbsp;</div>
-
-		<div class="fadein medium-12 large-9 columns" >
-			<ul><li>HTML5</li></ul>
-			<ul><li>CSS3</li></ul>
-			<ul><li>JavaScript</li></ul>
-			<ul><li>jQuery</li></ul>
-			<ul><li>jQueryUI</li></ul>
-			<ul><li>JSON</li></ul>
-			<ul><li>AJAX</li></ul>
-			<ul><li>JavaScript Objects</li></ul>
-			<ul><li>JavaScript SPAs</li></ul>
-			<ul><li>Foundation</li></ul>
-			<ul><li>Sass</li></ul>
-			<ul><li>Less</li></ul>
-			<ul><li>Photoshop</li></ul>
-			<ul><li>Illustrator</li></ul>
-			<ul><li>Bootstrap prototyping</li></ul>
-			<ul><li>Sublime Text</li></ul>
-			<ul><li>Visual Studio</li></ul>
-			<ul><li>LMS, CMS, and LCMS Administration</li></ul>
-			<ul><li>Mobile First</li></ul>
-			<ul><li>Responsive Design</li></ul>
-			<ul><li>Graphic Design</li></ul>
-			<ul><li>Print Design/Layout</li></ul>
-			<ul><li>Writing</li></ul>
-			<ul><li>Copyediting</li></ul>
-			<ul><li>Proofreading</li></ul>
-			<ul><li>Fine Art</li></ul>
-			<ul><li>Illustration</li></ul>
-			<ul><li>Photography</li></ul>
-			<ul><li>Instructional Design</li></ul>
-			<ul><li>eLearning Development</li></ul>
-			<ul><li>Adobe Captivate</li></ul>
-			<ul><li>Articulate Storyline</li></ul>
-		</div>
-
-		<div class="medium-0 large-2 columns" >&nbsp;</div>
-
-	</div>
-</div>
-
-
-
-<div id="experience" class="large-12 columns theme00" >
-
-	<div class="panel" >
-		<div class="medium-12 large-12 columns" >
-			<div class="fadein reversal" >
-				<h5 class="theme00" >Experience</h5>
-			</div>
-		</div>
-		<div id="ttip-experience" class="tooltip" >
-			<div class="ttip-content" >
-				This section includes links to examples of some of my work.
-			</div>
-		</div>
-	</div>
-
-	<div class="panel" >
-
-		<div class="medium-0 large-1 columns" >&nbsp;</div>
-
-		<div class="medium-12 large-11 columns" >
-
-			<div id="design" class="fadein medium-6 large-6 columns" >
-
-				<h5 class="bar theme00" >Design</h5>
-				<p></p>
-
-				<div class="large-10 columns" >
-					<h5 class="disbar" >Custom Dynamic eLearning Course</h5>
 <p>
-	A freestanding Flash Movie created entirely from scratch, with every aspect* of the UI hand designed, drawn, animated, and coded by me 
-	(* disclaimer: not including the cheap supplementary clipart, which was a necessary evil dictated by this project&rsquo;s astonishingly aggressive 2-weeks zero-to-live development timeline).
-	Oh, and I also Instructional-Designed and wrote every word of its content!
+	<img src="images/uc.gif" />
 </p>
-					<p><a href="http://mikezimmerman.brace.io/fl-el-menards/" target="_blank" class="transxbg secondary small button theme00" >Check it out →</a></p>
-				</div>
-				<div class="large-2 columns" >&nbsp;</div>
-
-			</div>
-
-			<div id="development" class="fadein medium-6 large-6 columns" >
-
-				<h5 class="bar theme00" >Development</h5>
-				<p></p>
-
-				<div class="large-10 columns theme00" >
-					<h5 class="disbar" >&ldquo;Floating&rdquo; Instructional UI</h5>
-<p>
-	My easy to program, moveable instructional JavaScript user interface &ldquo;floats&rdquo; above full-screen content and provides interactive guidance on the usage of that content.
-	Ideal for software simulation training, and JIT help on production systems.
-	View the 1500+ lines of raw JS code that I hand typed with Notepad (and which makes use of a JS &ldquo;class inheritance&rdquo; implementation of my own devising) on <a href="https://github.com/mikezimmerman/instructionbox.js/blob/master/instructionbox.js" target="_blank" class="textlink theme00" >GitHub</a>.
-</p>
-					<p><a href="projs/ibox" target="_blank" class="transxbg secondary small button theme00" >Check it out →</a></p>
-				</div>
-				<div class="large-2 columns" >&nbsp;</div>
-<!--
-				<div class="large-10 columns theme00" >
-					<h5 class="disbar" >eLearning &ldquo;Engine&rdquo;:&nbsp; a JavaScript SPA</h5>
-					<p>JS SPA.</p>
-					<p><a href="" class="transxbg secondary small button theme00" >Check it out →</a></p>
-				</div>
-				<div class="large-2 columns" >&nbsp;</div>
--->
-			</div>
-
-		</div>
-
-		<div class="medium-0 large-0 columns" ></div>
-
-	</div>
-</div>
 
 
-
-<footer>
-	<div id="footer" class="large-12 columns theme00" >
-		<hr class="theme00" />
-		<div class="fadein large-12 columns" >
-			<h6 class="theme00" >location (re: onsite work):&nbsp; metropolis of Chicago</h6>
-			<div style="float:right;" >
-				<p class="deemph-1 theme00" >&copy; Mike Zimmerman. All rights reserved.&nbsp;</p>
-				<p class="deemph-2 theme00" >|&nbsp; version 2.1.1</p>
-			</div>
-		</div>
-	</div> 
-</footer>
-
-
-
-
-
-<script src="js/lib/jquery-2.1.1.min.js" ></script>
-<script src="js/lib/jquery-ui.min.js" ></script>
-<script src="js/lib/jquery.visible.js" ></script>
-<script src="js/start.js" ></script>
-<script src="js/foundation.min.js" ></script>
-<script>
-
-$( document ).foundation();
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-54891141-1', 'auto');ga('require', 'displayfeatures');ga('send', 'pageview');
-
-</script>
 </body>
 </html>
